--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.Koko.Kokotilities",
+  "name": "com.Domtic.Kokotilities",
   "version": "1.0.0",
   "displayName": "Utilities by Koko",
   "description": "Package with utilities and scripts to enhance unity development",
