--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Package with utilities and scripts to enhance unity development",
   "unity": "2022.1",
   "dependencies": {
-    "com.unity.cinemachine": "3.1.0",
-    "com.dominikatomaszewska.primetween": "1.2.0",
-    "com.dbrizov.naughtyattributes": "2.1.4"
+    "com.unity.cinemachine": "2.9.7",
+    "com.dominikatomaszewska.primetween": "https://github.com/DominikaTomaszewska/PrimeTween.git",
+    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git"
  },
   "author": {
     "name": "Koko"
