--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Package with utilities and scripts to enhance unity development",
   "unity": "2022.1",
   "dependencies": {
-    "com.unity.cinemachine": "2.9.7",
-    "com.dominikatomaszewska.primetween": "https://github.com/DominikaTomaszewska/PrimeTween.git",
+    "com.unity.cinemachine": "3.0.0",
+    "com.dominikatomaszewska.primetween": "1.2.0",
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git"
  },
   "author": {
