--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "unity": "2022.1",
   "dependencies": {
     "com.unity.cinemachine": "2.9.7",
-    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm"
+    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#2.1.4"
  },
   "author": {
     "name": "Koko"
