--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "displayName": "Utilities by Koko",
   "description": "Package with utilities and scripts to enhance unity development",
   "unity": "2022.1",
-  "dependencies": {
-    "com.unity.cinemachine": "2.9.7",
-    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#2.1.4"
- },
+ "dependencies": {
+  "com.unity.cinemachine": "2.9.7",
+  "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git?path=/Assets/NaughtyAttributes#2.1.4"
+},
   "author": {
     "name": "Koko"
   }
