--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "displayName": "Utilities by Koko",
   "description": "Package with utilities and scripts to enhance unity development",
   "unity": "2022.1",
- "dependencies": {
-  "com.unity.cinemachine": "2.9.7",
-},
+  "dependencies": {
+  "com.unity.cinemachine": "2.9.7"
+  },
   "author": {
     "name": "Koko"
   }
