--- a/Kokotilities.asmdef
+++ b/Kokotilities.asmdef
@@ -12,8 +12,10 @@
         "GUID:bd26724a735bb4282b7fbdef4681eb5f",
         "GUID:85ffa6ed6408b405d94d60bf1dce1057",
         "GUID:9b75a211bc674cd2906483cd8aa2159d",
+        "GUID:090d70c1ebac0421985bd70fa7f561ef",
         "GUID:80ecb87cae9c44d19824e70ea7229748",
         "GUID:2f1f0462514f541c7851be3650ccd0ff",
+        "GUID:96901b66f89944bf6aa2338f07026648",
         "GUID:96901b66f89944bf6aa2338f07026648"
     ],
     "includePlatforms": [],
